myteo/test/analyze/name_resolution/trait_cycles.exp
Error: Cycle detected in super traits of `Trait1`
test/analyze/name_resolution/trait_cycles.myte:3:6-12
 3 | trait Trait1 { extends Trait4 }
   |       ^^^^^^